--- a/src/main/resources/templates/factura/ver.html
+++ b/src/main/resources/templates/factura/ver.html
@@ -13,6 +13,9 @@
                     <i class="bi bi-arrow-left me-2"></i>
                     <span th:text="#{text.global.volver}">Volver</span>
                 </a>
+                <a class="btn btn-danger btn-xs mb-4 float-end"
+                   th:href="@{'/factura/ver/' + ${factura.id}(format=pdf)}">PDF</a>
+
             </h4>
 
             <ul class="list-group my-2">
